@@ -92,6 +92,34 @@ name|IOContext
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|NRTCachingDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|RateLimitedDirectoryWrapper
+import|;
+end_import
+
 begin_comment
 comment|/**  * Directory provider which mimics original Solr   * {@link org.apache.lucene.store.FSDirectory} based behavior.  *   * File based DirectoryFactory implementations generally extend  * this class.  *   */
 end_comment
@@ -268,7 +296,7 @@ name|dirFile
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Override for more efficient moves.    *     * @throws IOException    *           If there is a low-level I/O error.    */
+comment|/**    * Override for more efficient moves.    *     * Intended for use with replication - use    * carefully - some Directory wrappers will    * cache files for example.    *     * This implementation works with two wrappers:    * NRTCachingDirectory and RateLimitedDirectoryWrapper.    *     * You should first {@link Directory#sync(java.util.Collection)} any file that will be     * moved or avoid cached files through settings.    *     * @throws IOException    *           If there is a low-level I/O error.    */
 annotation|@
 name|Override
 DECL|method|move
@@ -291,13 +319,29 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|Directory
+name|baseFromDir
+init|=
+name|getBaseDir
+argument_list|(
+name|fromDir
+argument_list|)
+decl_stmt|;
+name|Directory
+name|baseToDir
+init|=
+name|getBaseDir
+argument_list|(
+name|fromDir
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
-name|fromDir
+name|baseFromDir
 operator|instanceof
 name|FSDirectory
 operator|&&
-name|toDir
+name|baseToDir
 operator|instanceof
 name|FSDirectory
 condition|)
@@ -309,7 +353,7 @@ operator|(
 operator|(
 name|FSDirectory
 operator|)
-name|fromDir
+name|baseFromDir
 operator|)
 operator|.
 name|getDirectory
@@ -322,7 +366,7 @@ operator|(
 operator|(
 name|FSDirectory
 operator|)
-name|toDir
+name|baseToDir
 operator|)
 operator|.
 name|getDirectory
@@ -381,6 +425,71 @@ argument_list|,
 name|ioContext
 argument_list|)
 expr_stmt|;
+block|}
+comment|// special hack to work with NRTCachingDirectory and RateLimitedDirectoryWrapper
+DECL|method|getBaseDir
+specifier|private
+name|Directory
+name|getBaseDir
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|)
+block|{
+name|Directory
+name|baseDir
+decl_stmt|;
+if|if
+condition|(
+name|dir
+operator|instanceof
+name|NRTCachingDirectory
+condition|)
+block|{
+name|baseDir
+operator|=
+operator|(
+operator|(
+name|NRTCachingDirectory
+operator|)
+name|dir
+operator|)
+operator|.
+name|getDelegate
+argument_list|()
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|dir
+operator|instanceof
+name|RateLimitedDirectoryWrapper
+condition|)
+block|{
+name|baseDir
+operator|=
+operator|(
+operator|(
+name|RateLimitedDirectoryWrapper
+operator|)
+name|dir
+operator|)
+operator|.
+name|getDelegate
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|baseDir
+operator|=
+name|dir
+expr_stmt|;
+block|}
+return|return
+name|baseDir
+return|;
 block|}
 block|}
 end_class
